# docs/swagger.json
@@ -15,8 +15,10 @@
             "get": {
                 "security": [
                     {
+                        "token": []
+                    },
+                    {
                         "OAuth2Application": [
-                            "read",
                             "account"
                         ]
                     }
@@ -38,6 +40,13 @@
                         "description": "ID",
                         "name": "id",
                         "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Authorization",
+                        "name": "token",
+                        "in": "header",
                         "required": true
                     }
                 ],
@@ -64,6 +73,14 @@
                     "监测服务"
                 ],
                 "summary": "健康检查接口",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户名",
+                        "name": "name",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": ""
@@ -72,7 +89,7 @@
             }
         },
         "/api/wechat": {
-            "get": {
+            "post": {
                 "description": "微信服务",
                 "consumes": [
                     "application/json"
@@ -86,11 +103,13 @@
                 "summary": "微信服务",
                 "parameters": [
                     {
-                        "type": "string",
                         "description": "Name",
                         "name": "name",
-                        "in": "path",
-                        "required": true
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 ],
                 "responses": {
