# src/controller/v1/account.go
@@ -1,11 +1,9 @@
 package v1
 
-
 import (
 	"gin-use/src/controller"
+
 	"github.com/gin-gonic/gin"
-
-
 )
 
 // AccountInfo 用户个人信息
@@ -15,11 +13,12 @@ import (
 // @Accept application/json
 // @Produce application/json
 // @Param id path int true "ID"
-// @Security OAuth2Application[read,account]
-// @scope.admin Grants read and write access to administrative information
+// @Security token
+// @param token header string true "Authorization"
+// @Security OAuth2Application[account]
 // @Success 200 {object} model.Account
 // @Router /api/account/info [get]
 func AccountInfo(c *gin.Context) {
-	// data := 
-	controller.Response("ok","请求成功",nil,c)
+	// data :=
+	controller.Response("ok", "请求成功", nil, c)
 }
